fix: navigation slightly too wide on iPhone

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -9,6 +9,7 @@ body.nav-sidebar {
     $activator-color: $brand-color-dark;
     $activator-background: $background-color;
     $content-wrapper: "main";
+    $sidebar-width: 17rem;
 
 
     @import "sidebar";
