--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -8,7 +8,7 @@ $sidebar-activator: 'input#nav-checkbox' !default;
 $sidebar-control: 'label[for="nav-checkbox"]' !default;
 
 $sidebar-width: 18rem !default;
-$sidebar-font-size: (1rem) !default;
+$sidebar-font-size: (0.9rem) !default;
 $sidebar-font-family: "Arial" !default;
 $sidebar-background: black !default;
 $sidebar-font-color: rgba(255,255,255,0.6) !default;
